[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Entities/Components/Health.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Entities/Components/HealthDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Head.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Entities/Components/EnergySupply.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Entities/Entity.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Entities/Components/EnergyDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Items/Armors/Armor.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Entity" type="KinematicBody2D" groups=["Entity"]]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
rotation = 1.5708
scale = Vector2( 3.8, 2.8 )
shape = SubResource( 1 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 1 )

[node name="EnergySupply" parent="." instance=ExtResource( 4 )]

[node name="HealthDisplay" parent="." instance=ExtResource( 2 )]
position = Vector2( -50, 50 )

[node name="EnergyDisplay" parent="." instance=ExtResource( 6 )]
position = Vector2( -100, 0 )

[node name="Armor" parent="." instance=ExtResource( 7 )]

[connection signal="death" from="Health" to="." method="_on_Health_death"]
